For 1.18.13:
	- browser plugin code manipulation - improve loading of secondary files on local
	  (non-networked) machines.

	- texture, if 3 or 4 channels, ignores the diffuseColor (X3D Spec 17.2.2.3)

For 1.18.12:
	- Makefile.PL - DESTDIR in install tags for Gentoo build. (Hanno Bock)

	- soundengine work for 64 bit compiles. (Charles Horn)

	- change GL_LIGHT_MODEL_AMBIENT to 0,0,0,1 - removes default "scene" ambient lighting.

For 1.18.11:
	- OSX Build work.

	- New X3D Parser - does not yet handle:
		Scripts
		PROTOS
		EXTERNPROTOS
		PixelTextures.

	- SFColorSetHSV and SFColorGetHSV

For 1.18.10:
	- reviewing Javascript interfacing. Most SF* nodes should now pass
	  correctly.

	- ambientIntensity - Shape material now uses the ambientIntensity value,
	  and lights set ambientIntensity as per their node values, now.

	- PointLight status now same as other lights - uses lightState.

	- memory corruption in "default MF*" values fixed in createNewX3DNode.

	- memory leak in OcclusionQueries fixed.

	- some minor parser problems fixed. (some more identified)

	- fixed problem in *Background nodes when sky and ground entries were empty

	- X3dToVrml97.xslt changed - it was adding EXTERNPROTOS for 
	  nodes supported in FreeWRL.

	- Textures had a threading issue - registration code rewritten.

	- MovieTexture did not work with the new parser; fixed.

	- Makefile.PL - javascript library not copied over - fixed.

For 1.18.9:
	- no perl parser at all.

	- perl runtime code removed.

	- XLib error handler.

	- New Makefile.PL and new build process.
		- build revamp in progress - 1.18.9 has better linking on linux as
		  compared to 1.18.8 and earlier.



For 1.18.5:
	- Sound and AudioClip nodes should work again - problem with add_first and
	  these nodes.

	- EAI/SAI should be close to working.

For 1.18.4:
	- javascript code that calls perl being rewritten.
		(tests/52 added - uses createVrmlFromURL)

	- bug in OpenGL window size fixed. (affected TouchSensors)
