@@ -1,3 +1,6 @@
+For 1.18.14:
+	- fixed material transparency in VRML Proto expansions
+
 For 1.18.13:
 	- browser plugin code manipulation - improve loading of secondary files on local
 	  (non-networked) machines.
